@@ -510,6 +510,17 @@ rsvg_new_pattern (void)
 	return &pattern->super;
 }
 
+static int hasstop(GPtrArray *lookin)
+{
+	unsigned int i;
+	for (i = 0; i < lookin->len; i++)
+		{
+			if (((RsvgNode *)g_ptr_array_index(lookin, i))->type == RSVG_NODE_STOP)
+				return 1;
+		}
+	return 0;
+}
+
 void
 rsvg_linear_gradient_fix_fallback(RsvgLinearGradient * grad)
 {
@@ -549,7 +560,7 @@ rsvg_linear_gradient_fix_fallback(RsvgLinearGradient * grad)
 					grad->hasbbox = TRUE;
 					grad->obj_bbox = fallback->obj_bbox;
 				}
-				if (!grad->super.children->len && fallback->super.children->len){
+				if (!hasstop(grad->super.children) && hasstop(fallback->super.children)){
 					grad->super.children = fallback->super.children;
 				}
 				ufallback = fallback->fallback; 
@@ -569,7 +580,7 @@ rsvg_linear_gradient_fix_fallback(RsvgLinearGradient * grad)
 					grad->hasbbox = TRUE;
 					grad->obj_bbox = fallback->obj_bbox;
 				}
-				if (!grad->super.children->len && fallback->super.children->len){
+				if (!hasstop(grad->super.children) && hasstop(fallback->super.children)){
 					grad->super.children = fallback->super.children;
 				}
 				ufallback = fallback->fallback; 
@@ -620,7 +631,7 @@ rsvg_radial_gradient_fix_fallback(RsvgRadialGradient * grad)
 					grad->hasbbox = TRUE;
 					grad->obj_bbox = fallback->obj_bbox;
 				}
-				if (!grad->super.children->len && fallback->super.children->len){
+				if (!hasstop(grad->super.children) && hasstop(fallback->super.children)){
 					grad->super.children = fallback->super.children;
 				}
 				ufallback = fallback->fallback; 
@@ -640,7 +651,7 @@ rsvg_radial_gradient_fix_fallback(RsvgRadialGradient * grad)
 					grad->hasbbox = TRUE;
 					grad->obj_bbox = fallback->obj_bbox;
 				}
-				if (!grad->super.children->len && fallback->super.children->len){
+				if (!hasstop(grad->super.children) && hasstop(fallback->super.children)){
 					grad->super.children = fallback->super.children;
 				}
 				ufallback = fallback->fallback; 
